# claude-conversation-search-mcp

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  MCP_INTEGRATION.md  README.md  claude-search-mcp-config.json  claude-search-mcp.json  debug_content.rs  test_extraction.py  test_mcp.py
.github/workflows/: ci.yml  release.yml
docs/: jsonl-format.md
src/: cache.rs  cli.rs  indexer.rs  lib.rs  main.rs  mcp_server.rs  models.rs  parser.rs  search.rs  shared.rs
src/cli/: commands.rs  index.rs  mod.rs
src/mcp/: context_viewer.rs  conversation_aggregator.rs  mod.rs  server.rs  stats_analyzer.rs  topic_analyzer.rs
src/shared/: cache.rs  config.rs  indexer.rs  lock.rs  metadata.rs  mod.rs  models.rs  parser.rs  path_utils.rs  search.rs  terminal.rs  utils.rs
