[package]
name = "claude-search"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "claude-search"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "claude-search-mcp"
path = "src/mcp_server.rs"
required-features = ["mcp"]

[features]
default = ["cli", "mcp"]
cli = []
mcp = []

[dependencies]
tantivy = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
dirs = "5.0"
glob = "0.3"
regex = "1.0"
once_cell = "1.0"
uuid = { version = "1.0", features = ["v4"] }
