[package]
name = "claude-conversation-search"
version = "1.3.0"
edition = "2024"

[features]
default = []

[dependencies]
tantivy = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
dirs = "5.0"
glob = "0.3"
regex = "1.0"
once_cell = "1.0"
uuid = { version = "1.0", features = ["v4"] }
fs2 = "0.4"
strip-ansi-escapes = "0.2.1"

[target.'cfg(unix)'.dependencies]
exec = "0.3"
nix = { version = "0.29", features = ["term"] }

[dev-dependencies]
tempfile = "3"
